# OpenCTI-Connector-templates

./: .gitignore  README.md  pyproject.toml  requirements.txt
opencti_connector_templates/: README.md  __init__.py  external_import.py
opencti_connector_templates/connector_helper/: __init__.py  connector_helper.py
opencti_connector_templates/external_import/: README.md  __init__.py  external_import.py
src/opencti_connector_templates/: __init__.py
