[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "opencti_connector_templates"
authors = [{name = "tedk", email = "tedk@kpn-cert.nl"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    'pycti==5.12.29',
    'stix2==3.0.1',
]